--- a/src/components/accordian/style.css
+++ b/src/components/accordian/style.css
@@ -1,9 +1,11 @@
 .wrapper {
   display: flex;
-  height: 100vh;
+  height: 100%;
   width: 100vw;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
+  gap: 15px;
 }
 .accordian {
   width: 500px;
